force-app/main/default/objects/Proposal_Committee_Interview_Evaluation__c/Proposal_Committee_Interview_Evaluation__c.object-meta.xml
<CustomObject>
    <label>Proposal Committee Interview Evaluation</label>
    <nameField>
        <displayFormat>PCIE-{000}</displayFormat>
        <label>Proposal Committee Interview Evaluation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Committee Interview Evaluation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>