force-app/main/default/objects/Proposal_Committee_Interview_Evaluation__c/fields/Interview__c.field-meta.xml
<CustomField>
    <fullName>Interview__c</fullName>
    <label>Interview</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipName>Committee_Member_Interview_Evaluation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>