force-app/main/default/objects/Proposal_Committee_Interview_Evaluation__c/fields/Interview_Evaluation_Status__c.field-meta.xml
<CustomField>
    <fullName>Interview_Evaluation_Status__c</fullName>
    <label>Interview Evaluation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>