force-app/main/default/objects/Proposal_Committee_Interview_Evaluation__c/fields/Interview_Evaluation_Submitted_Time__c.field-meta.xml
<CustomField>
    <fullName>Interview_Evaluation_Submitted_Time__c</fullName>
    <label>Interview Evaluation Submitted Time</label>
    <type>DateTime</type>
</CustomField>