force-app/main/default/objects/Proposal_Committee_Interview_Evaluation__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <formula>Proposal_Committee__r.Committee_Member__r.Committee_Master__r.First_Name__c +  &apos; &apos; + Proposal_Committee__r.Committee_Member__r.Committee_Master__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Name</label>
    <type>Text</type>
</CustomField>