force-app/main/default/objects/Proposal_Committee_Interview_Evaluation__c/fields/Overall_Interview_Comments__c.field-meta.xml
<CustomField>
    <fullName>Overall_Interview_Comments__c</fullName>
    <label>Overall Interview Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>