force-app/main/default/objects/Proposal_Committee_Interview_Evaluation__c/fields/Proposal_Committee__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Committee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal Committee</label>
    <referenceTo>Proposal_Committee__c</referenceTo>
    <relationshipName>Committee_Member_Interview_Evaluation</relationshipName>
    <type>Lookup</type>
</CustomField>