force-app/main/default/objects/Proposal_Committee_Interview_Evaluation__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>